--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
- {
+{
   "name": "podocarpus-nest-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
+  "type": "module",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
@@ -78,7 +79,8 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
@@ -97,10 +99,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "overrides": {
-    "@aws-sdk/client-sesv2": "^3.700.0",
-    "@smithy/smithy-client": "^3.5.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
