--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate": "npx prisma migrate dev --name init",
-    "prisma:seed": "prisma db seed --config ./prisma/prisma.config.ts"
+    "prisma:seed": "npx prisma db seed"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
