--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "podocarpus-nest-backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "podocarpus",
   "private": true,
-  "type": "module",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
